--- a/graph.html
+++ b/graph.html
@@ -5,14 +5,15 @@
         <link rel='stylesheet' href='dash.css'/>
         <script src='https://unpkg.com/leaflet@1.4.0/dist/leaflet.js'></script>
         <script src="dash.JSON"></script>
+        
     </head>
     
     <body>
         <div class="Home">
             <nav class="nav">
                <a href="index.html" class="nav-item" active-color="orange">Home</a>
-                <a href="about.html" class="nav-item" active-color="green">About</a>
-                <a href="visuals.html" class="nav-item is-active" active-color="red">Visuals</a>
+                <a href="choropleth.html" class="nav-item" active-color="green">In Canada</a>
+                <a href="graph.html" class="nav-item is-active" active-color="red">Graph</a>
                 <span class="nav-indicator"></span>
             </nav>
             <center><h1 style="transform: translate(0,35px);">Visuals</h1></center>
