--- a/graph.html
+++ b/graph.html
@@ -16,7 +16,7 @@
                 <a href="graph.html" class="nav-item is-active" active-color="red">Graph</a>
                 <span class="nav-indicator"></span>
             </nav>
-            <center><h1 style="transform: translate(0,35px);">Visuals</h1></center>
+            <center><h1 style="transform: translate(0,35px);">Top 12 Countries With the Most Covid-19 Deaths in the World</h1></center>
             <canvas id="myCanvas" width="1000" height="480" class="canvas"></canvas>
             <!-- The following code for the graph numbers were not done with a for loop because the x coordinates varied based on the number of digits in the labels. It would have taken more lines of code to use a looping algorithm in this way because it would require if statemnts to check the amount of digits in each label.-->
             <h3 style="transform: translate(180px,550px)":>2000</h3>
@@ -33,7 +33,7 @@
             <h3 style="transform: translate(172px,-220px)":>24000</h3>
             <h3 class="grlabel1">Covid-19 Deaths Up Until April 21, 2020</h3>
             <h3 class="grlabel2">Countries</h3>
-            <center><h2 class = "graphtitle">Top 12 Countries With the Most Covid-19 Deaths in the World </h2></center>
+            <center><h2 class = "subtitle">(As of April 21, 2020)</h2>
             
         </div>
         
