--- a/choropleth.html
+++ b/choropleth.html
@@ -15,6 +15,7 @@
                 <a href="graph.html" class="nav-item" active-color="red">Graph</a>
                 <span class="nav-indicator"></span>
             </nav>
+            <center><h1 style="transform: translate(0,35px);">Covid-19 Deaths In Canada</h1></center>
         <div class="choromap" id='map' style='width:100%; height:500'></div>
         </div>
     </body>
